Bug 151056 - HANG: launching start center (GEN)
Summary: HANG: launching start center (GEN)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-09-19 11:26 UTC by Xisco Faulí
Modified: 2022-09-21 07:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-09-19 11:26:21 UTC
Steps to reproduce:
1. Launch LibreOffice with 'SAL_USE_VCLPLUGIN=gen instdir/program/soffice'

-> LibreOffice hangs

Not happening if using 'SAL_USE_VCLPLUGIN=gen instdir/program/swriter' 

Reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f0359fb2f01ecf9aed470ae90604f9bd6eec3380
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-09-19 11:27:39 UTC
Reproduced in

author	Mike Kaganski <mike.kaganski@collabora.com>	2022-09-17 21:02:44 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2022-09-17 21:50:38 +0200
commit e39fa3c4f5ae2560a4b6f6f789a0c5098ac43cf4 (patch)
tree 3056c35fb06b2bc0f4ee7607801fa5a7f7df3320
parent f295ab96fea5ac71592ea9b92610db9d441d1bd5 (diff)
Simplify b2d(poly)polygon implementation

Bisected with: bibisect-linux64-7.5

Adding Cc: to Mike Kaganski
Comment 2 Mike Kaganski 2022-09-20 15:36:50 UTC
https://gerrit.libreoffice.org/c/core/+/140248
Comment 3 Commit Notification 2022-09-20 19:21:12 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e4a72aa946b6c41a91dc6e74634093a83b9c22bd

tdf#151056: avoid modifying the static shared DEFAULT instance

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2022-09-21 07:39:58 UTC
Verified in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 90861cc6f815b3f34edb88d47afed0d1099e72e7
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Mike, thanks for fixing this issue. Should it be closed as RESOLVED FIXED ?
Comment 5 Mike Kaganski 2022-09-21 07:41:30 UTC
Yes, thanks for checking - I was unsure if it addressed the problem correctly, since I had difficulties debugging on Linux, and used a tweaked code on Windows to repro what I believed was the same problem :)
Comment 6 Xisco Faulí 2022-09-21 07:43:45 UTC
(In reply to Mike Kaganski from comment #5)
> Yes, thanks for checking - I was unsure if it addressed the problem
> correctly, since I had difficulties debugging on Linux, and used a tweaked
> code on Windows to repro what I believed was the same problem :)

I found opening the About dialog also triggered the hang for me, maybe this is also reproducible on Windows ? anyway, both issues are fixed now.