tdf#151056: avoid modifying the static shared DEFAULT instance

This was a thinko in commit e39fa3c4f5ae2560a4b6f6f789a0c5098ac43cf4
  Simplify b2d(poly)polygon implementation

This led to exponential growth of elements in each next polypolygon
created from scratch, that immediately manifested with the complex
SVG logo shown on the backing window.
And finally, there's no const_cast/as_const left in the file :)

Change-Id: Ie60f75ec86a8fa21799f4f1b589c04c9e4646183
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140248
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>